New FrostyBoy Sandbox/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Dispatched_from_Warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatched to Warehouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatched_to__c</fullName>
        <label>Dispatched to</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor_Primary_Email__c</fullName>
        <label>Distributor Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_Arrival_Date_Distributor__c</fullName>
        <label>Expected Arrival Date(Distributor)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Delivery_Date__c</fullName>
        <label>Internal Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Machine_Decals__c</fullName>
        <label>Machine Decals</label>
        <picklist>
            <controllingField>Machine_Model_Type__c</controllingField>
            <picklistValues>
                <fullName>Custom Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frosty Boy Bubbles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frosty Boy Wave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Yoghurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine_Model_Type__c</fullName>
        <label>Machine Model Type</label>
        <picklist>
            <picklistValues>
                <fullName>Classic 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 1500P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 2500P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 152</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 161</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor C723</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine Serial Number</label>
        <referenceTo>Machine__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Mode of Rental</label>
        <picklist>
            <picklistValues>
                <fullName>Free On Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warehouse_Arrival_Date__c</fullName>
        <label>Expected Warehouse Arrival Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>Machine_Serial_Number__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <validationRules>
        <fullName>MachNameMandatryB4dispatchToClient</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISBLANK( Machine_Serial_Number__c ) , OR( ISPICKVAL( Dispatched_to__c , &apos;Customer&apos;) , ISPICKVAL(Dispatched_to__c , &apos;Distributor&apos;) ))</errorConditionFormula>
        <errorDisplayField>Machine_Serial_Number__c</errorDisplayField>
        <errorMessage>Machine Serial Number should be populated before Dispatching to Customer/Distributor</errorMessage>
    </validationRules>
</CustomObject>